<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_menu_kosa_kata"
        android:title="@string/text_search_menu"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_sort"
            android:title="@string/text_urutan"
            app:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/menu_newest"
                    android:title="@string/text_terbaru"/>
                <item
                    android:id="@+id/menu_a_z"
                    android:title="@string/a_z"/>
                <item
                    android:id="@+id/menu_z_a"
                    android:title="@string/z_a"/>
            </menu>
        </item>
    </group>

</menu>